tests/errors/pseudo-reference.spcasmtest
org 0

global: nop
.local: nop

other_global:
bra local
